Newsletter source file changes for July 2018.

--- a/pnsac/newsletter/article_ContactInfo.tex
+++ b/pnsac/newsletter/article_ContactInfo.tex
@@ -31,8 +31,11 @@
 Director, President\\
 \email{president@projectnorthstar.ca}}
 
-\address{Garry Dupont\\
+\address{Neil Raynor\\
 Director, Vice President}\\
+
+\address{Garry Dupont\\
+Director}\\
 
 \address{Roger Button\\
 Director, Corporate Secretary, NStar Chronicle Editor}\\
@@ -40,11 +43,10 @@ Director, Corporate Secretary, NStar Chronicle Editor}\\
 \address{Phil Chrysler\\
 Director, Merchandise}\\
 
-\address{Neil Raynor\\
-Director}\\
 
-\address{Bill Tate\\
-Director, Special Events}\\
+
+%\address{Bill Tate\\
+%Director, Special Events}\\
 %613-523-8817\\
 %\email{billtate@bell.net}}
 
