--- a/pnsac/newsletter/article_EditorsNotes.tex
+++ b/pnsac/newsletter/article_EditorsNotes.tex
@@ -16,24 +16,8 @@
 
 \vspace{12pt}
 
-Our Association was incorporated in 2003. We are fortunate that a
-number of the original members of the organization, such as Tim
-Timmins, are still involved as they can provide an historical
-perspective. As Tim says, in the article "Our Members," there have been
-many bumps in the road, and the fact that the aircraft is still a long
-way from completion after 16 years speaks for itself. In January 2017,
-R\'{e}jean (Rej) Demers took up his position as CASM's Conservation Project
-Manager. Rej's first contribution to the Chronicle can be found in the
-"Conservator's Corner." The restoration of the North Star is a priority
-for Rej. He has spent the first year of his mandate gathering
-information and developing systems and procedures which will, in the
-long run, move the restoration of the aircraft forward in a coherent
-manner. I have previously stated the obvious and that is the health and
-vigour of the Association is dependent on the restoration status of the
-aircraft. In the last few years there have been as many bumps in the
-road as there are potholes in Ottawa in the spring. The President is
-very optimistic we have reached a real turning point (see the
-"President's Notes") and wouldn't that be great.
+Our readers will appreciate from the articles and photographs in this edition that real progress
+being made on the restoration of the aircraft. A number of new restoration volunteers have signed on this year bringing with them diverse skills and experience. Whoever thought that someone with a mountain climbing background would be able to put his special skills to work on an aircraft. Believe it or not but see the "Conservator's Corner."  As I have previously commented: When work on the aircraft is moving ahead it encourages enthusiasm at all levels of the organization. One of the biggest cheerleaders of our Association is its president, Richard Lodge. Richard wears many hats including that of a restoration volunteer so he knows of what he speaks.  In this edition Richard discusses how he came to be involved in Project North Star and joins the illustrious members of the Association who have contributed to "Our Members" column.  But I would be remiss if I didn't thank all of our contributors to this edition including our publisher Drew Hodge.
 
 \vspace{12pt}
 
