--- a/pnsac/newsletter/article_ForthEvents.tex
+++ b/pnsac/newsletter/article_ForthEvents.tex
@@ -13,12 +13,12 @@
 %June 5, 2014     \hspace{50mm}\= Board of Directors' Meeting\\
 %{\normalfont\color{red}May 02, 2015}   \hspace{50mm}\= 
 %{\normalfont\color{red}Members' Quarterly Meeting}\\
-\textbf{Thursday, April 12, 2018}   \hspace{48mm}\=  Board of Directors Meeting\\ 
+\textbf{Tuesday, September 27, 2018}   \hspace{48mm}\=  Board of Directors Meeting\\ 
 %  Add blank line
  \> \\
-\textbf{Saturday, April 14, 2018}   \hspace{48mm}\=  Annual General Meeting\\ 
+\textbf{Thursday, September 29, 2018}   \hspace{46mm}\=  Members' Meeting\\ 
  \> \\
-\textbf{Sunday, July 01, 2018}   \hspace{53mm}\=  Canada Day\\ 
+%\textbf{Sunday, July 01, 2018}   \hspace{53mm}\=  Canada Day\\ 
 %\textbf{Saturday, May 6, 2017}   \hspace{50mm}\=  \\ 
 \end{tabbing}
 %\vspace{-5mm}
