--- a/pnsac/newsletter/article_MemberInterview.tex
+++ b/pnsac/newsletter/article_MemberInterview.tex
@@ -5,7 +5,7 @@
 % Head
 
 \title{Our Members}
-\author{Interview with Austin J Timmins}
+\author{Interview with Richard Lodge}
 
 \maketitle
 
@@ -22,41 +22,40 @@
 
 \begin{multicols}{2}
 
-1.\textit{What is your background in aviation?}
+1.\textit{What is your background in aviation?}\\
 
-My aviation experience includes 36 years service in the RCAF and nine
-years with the Canadian Aeronautics and Space Institute. In the RCAF I
-completed radio navigator training, which included communications,
-navigation and air gunner. I later qualified as an airborne
-interception navigator. My operational experience includes air
-transport, search and rescue and training. My assignments included
-Navigation Leader, Aircrew Leader, Squadron Commander, Air Command
-Navigator and Deputy Commander (COO) of the Air Transport Group. I
-logged 9500 hours, mostly on the following aircraft: Beechcraft,
-Dakota, North Star, Mitchell, Yukon, Hercules, and Boeing 707. My
-staff assignments in Europe included movement control (traffic
-management) for 1 Air Division and a tour at The NATO Defense College
-in Rome. 
+I trained in England as a Chartered Accountant, now often known as a bean
+counter. After I obtained my designation, I wanted to work in industry rather
+than in the accountancy profession. Following several interviews, I was offered
+a job with the Aero Engine Division of Rolls-Royce Ltd. in Derby, England.
 
-On retirement from the RCAF I participated in a Transport
-Canada A Base review of several airports. I then secured full
-employment with Canadian Aeronautics and Space Institute as Executive
-Director, retiring in 1995.
+Until I joined Rolls-Royce I had very little interest aviation. I had always
+been interested in transportation and had a major passion for railways which was
+the mode of transport I normally used in Britain in 1950s and 1960s.
 
-2. \textit{How long have you been involved with Project North Star and how and why did you get involved?}
+I became interested in aviation at Rolls-Royce and was fascinated by the
+complexity of designing and building aero engines.
 
-My involvement with efforts to conserve North Star 17515 predates
-Project North Star. Ottawa area members of the 426 Thunderbird Squadron
-Association, mostly retired North Star aircrew, met with the National
-Aviation Museum staff to express their concern about the state of the
-North Star and proposed volunteer involvement in a preservation effort.
-These expressions of concern and interest led to a meeting between the
-Association representatives, where General Adamson presented a proposal
-for the restoration of the aircraft. It was rejected but assurance was
-given that the North Star would be first priority when the new hangar
-was completed Also a North Star Trust Fund would be established. Robert
-Holmgren, an observer at the meeting, then proceeded to develop a
-proposal for volunteers to restore the North Star.
+After leaving Rolls-Royce in 1966, I was not involved with aviation until I came
+to Canada in 1978 and returned to the accountancy profession and started doing
+tax returns for pilots and other aviation personnel located around Dorval,
+Qu\`{e}bec.\\
+
+2. \textit{How long have you been involved with Project North Star and how and why did you get involved?}\\
+
+One of the driving forces behind the foundation of Project North Star was
+Robert Holmgren who was among a group who persuaded the National Aviation and
+Museum, as it was known then, that a group of a volunteers should be allowed to
+work on the North Star and bring it back to Museum display standards. The
+Project North Star Association of Canada (PNSAC) was incorporated in 2003 with
+Robert as its first president. Robert had worked for Air Canada on the
+engineering side of the airline in Dorval and I got to know him when doing the
+accounting for his wife's antiques business. At the time of the introduction of
+the Québec language laws (Bills 22 and 101), many Anglophones left the Montr\'{e}al
+area and moved to Ottawa. Both Robert and I moved in the early 1980's. After
+transferring my business to Ottawa, I remained in contact with Robert
+professionally and when PNSAC was formed he asked me to become the Association's
+first Treasurer.\\
 
 %\begin{figure}[htbp]
 %   \vspace{2em}
@@ -69,14 +68,17 @@ proposal for volunteers to restore the North Star.
 %   \label{fig:fwd_cockpit_complete}
 %\end{figure}
 
-3. \textit{What has been the history of your involvement to date?}
+3. \textit{What has been the history of your involvement to date?}\\
 
-I have been involved from the beginning of efforts to establish PNS,
-first as a member of a Steering Committee, led by Robert Holmgren,
-later, Vice President and then President of PNSAC. My contacts in
-aviation provided much needed advice and support, including access to
-initial funding for PNSAC.
-
+I remained Treasurer until 2010 when I was elected President after our second
+President, Tim Timmins, stood down. My election as President coincided with my
+partial retirement from the accountancy profession. Apart from my interest in
+railways, I had also always been interested in engineering and retirement gave
+me the opportunity to become a Restoration Volunteer on the North Star. Working
+on a Merlin engine and becoming part of the Engine Shop crew was an obvious
+place for me to work. I have enjoyed developing some of the limited skills I
+learned when working on pre-WW2 cars in England, which mostly used similar
+technology to the Merlin engines.\\
 
 %\begin{figure}[htbp]
 %	\vspace{2em}
@@ -100,10 +102,15 @@ initial funding for PNSAC.
 %	\label{fig:fwd_cockpit_complete}
 %\end{figure}
 
-4. \textit{What has been the highlight of your involvement?}
+4. \textit{What has been the highlight of your involvement?}\\
 
-The highlight of my involvement has to be the establishment of PNS and
-PNSAC.
+In the 1950s I was one of the early volunteers working on the first preserved
+railway in the world, the Talyllyn Railway in Wales. During this I learned much
+about volunteering and how such an organization could work. Helping to organize
+and build PNSAC over the last 14 years has both been challenging and very
+interesting. We are now seeing the fruits of our work both in the actual
+achievements in the restoration of the North Star and the enthusiasm of our
+Association members.\\
 
 %\begin{figure}[htbp]
 %   \vspace{2em}
@@ -116,15 +123,25 @@ PNSAC.
 %   \label{fig:nav-radio-rack}
 %\end{figure}
 
-5. \textit{What has been the most challenging part of your involvement?}
+5. \textit{What has been the most challenging part of your involvement?}\\
 
-PNS is now in its 16th year. It has been a work in progress with many
-bumps along the way. I spent a lot of time and effort, along with other
-members of the Executive, evening out these bumps. Establishing and
-maintaining effective channels of communication with CASM and CSTM
-required constant attention. Much effort was directed to fund raising,
-publicity, and, finding volunteers. In the beginning, every date
-brought a new challenge.
+Volunteers working on an aircraft owned by the Government of Canada in a
+national Federal museum was in the early 2000s an entirely new concept. Until
+that time all work on the aircraft collection had been carried out by Museum
+permanent staff. It was not easy to persuade the Museum that volunteers could be
+trusted to carry out restoration work to the high standards of the Museum and
+that as a group they would have the tenacity to continue working for many years.
+Now 14 years later and after over 80,000 hours of volunteer restoration work,
+PNSAC is going strong and will definitely see the end of the North Star
+restoration in the years to come.
+
+Starting a new project is not easy. There is always skepticism as to whether the
+new organization will succeed and in some cases resistance to the concept of the
+new organization. Over the years we have had to overcome all these problems and
+avoid being discouraged when we were unable to do things the way we initially
+wanted to do them. Our acceptance by the Museum as a trusted partner is a
+testament to the patience and hard work of all our volunteers and the support of
+key members of the Museum's permanent staff.
 
 \begin{footnotesize}
     \raggedleft PNSAC\\
