--- a/pnsac/newsletter/article_Miscellany.tex
+++ b/pnsac/newsletter/article_Miscellany.tex
@@ -4,12 +4,60 @@
 
 % Head
 
-\title{Miscellany}
+\title{North Star tail removal photographs}
 %% \author{Drew Hodge}
 
 \maketitle
 
-\end{multicols}
+%\end{multicols}
+
+\begin{figure}[httb]
+   \vspace{2em}
+   \centering
+   \includegraphics[scale=1.2]{"northstar tail remove 2018-2-X2-scaled".png}
+%   \caption*{\small \em Scaffold erected next to North Star to support removal of the rudder and vertical stablizer.}
+   \label{fig:stab-one}
+\end{figure}
+
+\begin{figure}[httb]
+   \vspace{2em}
+   \centering
+   \includegraphics[scale=1.2]{"northstar tail remove 2018-4-X2-scaled".png}
+%   \caption*{\small \em Scaffold erected next to North Star to support removal of the rudder and vertical stablizer.}
+   \label{fig:stab-one}
+\end{figure}
+
+\begin{figure}[httb]
+   \vspace{2em}
+   \centering
+   \includegraphics[scale=1.2]{"northstar tail remove 2018-15-X2-scaled".png}
+%   \caption*{\small \em Scaffold erected next to North Star to support removal of the rudder and vertical stablizer.}
+   \label{fig:stab-one}
+\end{figure}
+
+\begin{figure}[httb]
+   \vspace{2em}
+   \centering
+   \includegraphics[scale=1.2]{"northstar tail remove 2018-16-X2-scaled".png}
+%   \caption*{\small \em Scaffold erected next to North Star to support removal of the rudder and vertical stablizer.}
+   \label{fig:stab-one}
+\end{figure}
+
+\begin{figure}[httb]
+   \vspace{2em}
+   \centering
+   \includegraphics[scale=1.2]{"northstar tail remove 2018-3-X2-scaled".png}
+%   \caption*{\small \em Scaffold erected next to North Star to support removal of the rudder and vertical stablizer.}
+   \label{fig:stab-one}
+\end{figure}
+
+\begin{figure}[httb]
+   \vspace{2em}
+   \centering
+   \includegraphics[scale=1.2]{"northstar tail remove 2018-19-X2-scaled".png}
+%   \caption*{\small \em Scaffold erected next to North Star to support removal of the rudder and vertical stablizer.}
+   \label{fig:stab-one}
+\end{figure}
 
 %\begin{figure}[ht!]
 %   \vspace{2em}
@@ -22,11 +70,11 @@
 %   \label{fig:merchandise}
 %\end{figure}
 
-\begin{enumerate}
-	\item "The Canadian North Star." This book and others referencing the North Star is available through Canavbooks ({\normalfont\color{blue}\texttt{\href{http://www.canavbooks.com}{www.canavbooks.com}}}).
-	\item "Short on Silence" is an article on CASM's North Star, included in the February 2016 edition of the British publication {\normalfont\color{blue}\texttt{\href{http://www.flypast.com/}{Fly Past Magazine}}}.
-	\item Models. There are only two metal models of the North Star left, and it is not presently intended to re-order. The models are for sale at CASM's gift shop.
-\end{enumerate}
+%\begin{enumerate}
+%	\item "The Canadian North Star." This book and others referencing the North Star is available through Canavbooks ({\normalfont\color{blue}\texttt{\href{http://www.canavbooks.com}{www.canavbooks.com}}}).
+%	\item "Short on Silence" is an article on CASM's North Star, included in the February 2016 edition of the British publication {\normalfont\color{blue}\texttt{\href{http://www.flypast.com/}{Fly Past Magazine}}}.
+%	\item Models. There are only two metal models of the North Star left, and it is not presently intended to re-order. The models are for sale at CASM's gift shop.
+%\end{enumerate}
 
 
 
@@ -34,7 +82,7 @@
     \raggedleft PNSAC\\
 \end{footnotesize}
 
-\begin{multicols}{2}
+%\begin{multicols}{2}
 
 % End of text.
 
