--- a/pnsac/newsletter/article_PresReport.tex
+++ b/pnsac/newsletter/article_PresReport.tex
@@ -10,57 +10,52 @@
 
 \maketitle
 
-Since the last issue of the NStar Chronicle in March of this year we
-have continued to reorganize our volunteer operations under the
-leadership of the Museum's Special Projects Manager, R\'{e}jean (Rej)
-Demers. We have started a recruitment process for new restoration
-volunteers and to date two new people have started work. During the
-summer two more permanent Museum staff joined Rej to replace people who
-have retired. It is obviously taking time for the new Museum staff to
-get to know the complex operations of the Aviation Museum, to get to
-know the Project North Star volunteers and assess their various talents
-and areas of expertise. Consequently, our summer has been quiet but
-steadily productive.
+These are exciting times to be a member of the Project North Star Association.
+We  have recently taken part in the 2018 Doors Open Ottawa. This is a major
+event for the Museum and PNSAC volunteers were able to make a significant
+contribution to the success of the two open days. Doors Open has become second
+only to Canada Day in its importance to the Museum. (more on Open Doors 2018
+later in this issue).
 
-For several reasons it became necessary to reorganize the location of
-several major Museum artifacts. This affected the North Star aircraft
-which spent the summer outside the Reserve Hanger resulting in some
-problems with water ingress and further bird activity. I am pleased to
-say that the aircraft is now back inside the hangar.
+A few days before Canada Day the aircraft was brought outside. Unfortunately,
+the day itself was extremely hot and the number of visitors was well down from
+previous years. Nonetheless our volunteers did a yeoman service in talking to
+the public about our restoration work.
 
-The Museum is actively supporting Project North Star and trying to
-facilitate our restoration work wherever possible and is promoting our
-work and future activities. Our Treasurer, Paul Labranche, and I
-recently met with the Museum Foundation. The Foundation is the umbrella
-organization with responsibility for fundraising and business
-development at the three museums, comprising the Museum Corporation,
-(Aviation, Science \& Tech and Agriculture). We had a very productive
-meeting, which among other things has resulted in the Foundation
-deciding to highlight Project North Star in its Fall fundraising mail
-out. This type of collaboration is very good for our Association and we
-hope as good for the Foundation.
+Although showing the aircraft to the public is very important to us, our main
+purpose is to restore the North Star to museum condition. Much of our work is
+detailed, painstaking and unspectacular such as restoring a small part of the
+aircraft which can take many days or weeks. At other times making progress is
+very visible. We are in such a situation now.
 
-Our biggest challenge at present is to get our website properly
-operational again. A couple of our volunteers with website knowledge
-have indicated a willingness to do the necessary work and we are hoping
-to have the site working and up to date in the near future.
+At the end of May we had one of our regular meetings with Chris Kitzan (Director
+General of CASM) together with Neil Raynor (VP of PNSAC), Cedric St-Amour (CASM
+Volunteer Coordinator) and Reg Demers (Our CASM supervisor There was a full
+exchange of ideas, suggestions for bringing  the public into the Museum and ways
+in which PNSAC could be involved in these initiatives and events. The meeting
+ended with me having a full sheet of notes covering future planning, major
+restoration work and how we can make sure we recruit younger people both as
+members of PNSAC and where possible active Restoration Volunteers. 
 
-On December 2nd we held a Members' meeting at the Museum when we were
-fortunate to have Jim Mason join us to talk about the restoration of an
-early Lockheed aircraft flown by TCA. The meeting was well attended in
-a new venue of the Avro Arrow room instead of the Bush Theatre.
-Following Jim's interesting presentation, the group moved to the
-Museum's Restoration Hangar where Rej talked about the progress of the
-North Star restoration and the plans for work in 2018.
+A meeting like the one above only happens when an organization is thriving, and
+everybody is excited about the future. During the last 15 years PNSAC has
+demonstrated that it is capable delivering very high-quality restoration work.
+We have already accumulated over 80,000 hours of work and during this time we
+have become a trusted partner of the Museum. Our website is now operational
+again and in the next few weeks we expect to be able to update it and make it
+more relevant to where we are with the project now. One of the major initiatives
+taking place is to develop a diagrammatic history of the work done on the North
+Star restoration and a timeline for future work on the aircraft. 
 
-One of the initiatives currently underway is to create a visual
-timeline of the work already completed on the North Star restoration
-and the planned future work to bring the project to completion. It is
-anticipated that this visual timeline will be mounted on a display
-board for our members and the public to view.
+In closing, I once again urge Association members to become active volunteers.
+There are many volunteering opportunities both for those with major aviation
+experience to those who can only volunteer with us on occasions like Canada Day
+or can provide help for our many behind-the-scenes activities.
 
-In closing, I am optimistic that 2018 will see increased activity both
-in the aircraft restoration work and also within our Association.
+Our next Members' Meeting is scheduled for
+Saturday, September 29, 2018. Do reserve this date in your calendar if you can
+be in the Ottawa area on that day. The meeting will be held at the Canada
+Aviation and Space Museum. More details will follow later.
 
 \begin{footnotesize}
     \raggedleft PNSAC\\
