--- a/pnsac/newsletter/article_ProgReport.tex
+++ b/pnsac/newsletter/article_ProgReport.tex
@@ -6,66 +6,108 @@
 
 \title{Conservator's Corner}
 %\subtitle{PNS 2016 Status Update}
-\author{R\'{e}jean Demers}
+\author{R\'{e}jean Demers\\ Conservator\\ Canadian Aviation and Space Museum}
 
 \maketitle
 
-\textit{R\'{e}jean Demers (Rej, to those who work with him) is a Transport Canada
-licensed Aircraft Maintenance Engineer (AME). R\'{e}jean was a small
-business owner in Gatineau QC for over 10 years, working for a wide
-variety of private and commercial aircraft owners and operators.
-Following a stint in Northern Ontario working on turpoprop freighters
-and bulk fuel haulers, he took up his present position as a
-Conservator, Special Projects Manager with Ingenium, Canada's Museums
-of Science and Innovation in January 2017. His main project is the
-restoration of the Canadair North Star DC-4GM at the Canadian Aviation
-and Space Museum. He recounts below his introduction to his new job.}
+\textbf{Stabs and Tail Feathers}
 
-Leaving Pickle Lake was like getting shot out of a cannon in a snow
-storm. At that time, Christmas of 2016, I was the last person on my
-crew to leave the YPL base, having seen my colleagues off for the end
-of our tour and the holidays. After a full day of flying, the fleet had
-to be tucked away in the barn ready for service. On Boxing Day, a fresh
-crew would fly in and start another two week tour of line maintenance
-with the company we worked for. However, on that Christmas, I was
-quitting my job.
+Some tasks are easier than others, this is not a simple one. North Star S/N:
+122, registration 17515, was delivered to the National Aeronautical collection
+in 1965, intact and airworthy. After spending 39 years parked on the tarmac,
+awaiting restoration, the condition of its flight control surfaces had become
+less a statement of endurance and more a sad result of the elements. 
 
-Nobody knew I was leaving until I got back to the bunkhouse and shared
-Christmas dinner with the remaining pilots and ops personnel. I refer
-to them in these terms now, but then and there, I could say they were
-my friends. In the weeks leading to my departure, no one knew I was
-leaving. No one speaks of breaking out of prison when they are behind
-bars. The difference being the only bars I saw were the Pickle Lake
-Hotel and a watering hole in Thunder Bay called the Apollo.
+\begin{figure}[httb]
+   \vspace{2em}
+   \centering
+   \includegraphics[scale=0.5]{IMG_0705-scaled.png}
+   \caption*{\small \em Scaffold erected next to North Star to support removal of the rudder and vertical stablizer.}
+   \label{fig:stab-one}
+\end{figure}
 
-Driving down the 599 in that snow storm with a truck I had bought for
-\$100 was a white knuckle ride. Knowing this would probably be the last
-time I drove the 2000km distance between Northern Ontario and home in
-Gatineau. The stakes were high: A flight to catch in Ottawa (T-minus
-48hrs), New Year's eve in New York city with my family waiting there
-for me and a new job starting at CASM on the day of my wedding
-anniversary. Could 2017 start with anything less? Arriving to work that
-January 3rd morning was a good feeling, until I got startled by "Manny"
-the mannequin sitting in my predecessor's office chair. If a sense of
-humour was a job requirement, I hoped to get the joke. I would later
-find Manny in other compromising positions, some of which I refuse to
-admit my participation in writing.
+By the time restoration had begun in 2004, the flight control surfaces had
+sustained the full range of what mother nature had to offer over the years. In
+the fourteen years that followed, work has been carried out removing what
+assemblies could be reached from the ground. Ailerons and flaps, elevators and
+horizontal stabilizers had been removed and now, the vertical stabilizer and
+rudder in 2018. 
 
-The momentum I have gained in the twelve months since my escape from
-Pickle Lake is only part of what keeps me moving forward. I also count
-on the support of others, namely co-workers and volunteers. My position
-as Project Manager of the North Star restoration relies on the good
-work and cooperation of all hands involved. As the work itself proves
-to be technical and highly detailed, with wide ranges of abilities
-involved, people are always the driving force.
+This article will focus on the year long process that occupied roughly 2-4
+volunteers, twice a week, working at heights on scaffolding around the empennage
+("tail assembly") of 515. Work commenced following the museum's last big
+shuffle, in the fall of 2017. One side of the storage hangar was emptied to
+accommodate the acquisition of the C130E Hercules and Convair 580. The removal
+of CP-107 Canadair Argus from storage was a necessary trade-off for the new
+stacking, that left Project North Star with just enough space to work on.
 
-It was suggested my article for the North Star Chronicle be focused on
-the restoration of a certain four engined artifact \#1967.0645. For
-details on the work that has been carried out by our dedicated group of
-volunteers, I recommend you read my conservation report on the subject.
-It is available online: \textcolor{blue}{\texttt{\url{https://documents.techno-science.ca/documents/NorthStarConservationReportOctober2017.pdf}}}
-or by email: \textcolor{blue}{\email{rdemers@techno-science.ca}}
+%\begin{figure}[httb]
+%   \vspace{2em}
+%   \centering
+%   \includegraphics[scale=1.25]{DSC_1156-scaled.png}
+%   \caption*{\small \em \color{red} CAPTION NEEDED}
+%   \label{fig:stab-one}
+%\end{figure}
 
+The work involved in removing flight control surfaces from the ship starts by
+disconnecting cables, push rods and torque tubes. These relay pilot input
+directly to the airfoil. There are secondary components such as panels,
+fairings, plumbing for de-icing boots, grounding straps and electrical conduits.
+Finally, when the control surface or stabiliser is ready to be pulled, hinge
+bearings and spar bolts must be freed. Support must be provided to the component
+once the weight of the assembly is relieved from the airframe. Once
+disconnected, the "tail feather" or "stab" is lowered into a cradle on the
+ground for cleaning, condition assessment and preparation for restoration. The
+approach being that a component is more accessible at ground level than 10-20
+feet overhead. Eventually, the outboard wing sections will follow the same
+treatment: Not a light undertaking. 
+
+Volunteers on task are comprised of a mix of experienced members and new
+additions to the crew. Setting up the scaffold was the first requirement in
+gaining access. We had an ex roughneck, Will Assad, building the first tower.
+Chris McGuffin, an experienced mountaineer, built the second stage to a full
+height of 30ft. Bruce Gemmill donated blood removing the fin retaining hardware,
+a modest 64 bolts through 4in. access panels. Peter Trobridge spent some hours
+in the hell hole, fitting a tail skid extension jack and running leaders for
+control cables. The heat of lights and summer humidity had a therapeutic effect,
+much like a sauna. 
+
+Years of battering had taken its toll on the rudder, shearing the torque tube
+and stripping the rudder of it's fabric. During this time, generations of
+starlings had been introduced to multi-level condo dwelling. Three garbage bags
+of nesting material were removed just to gain access to the pulleys in the
+vertical stabiliser alone. Starlings are neither good nest makers nor parents to
+their young. I will spare you the graphic descriptions of what was removed from
+those access panels. 
+
+\begin{figure}[httb]
+   \vspace{2em}
+   \centering
+   \includegraphics[scale=0.55]{IMG_20180529_132544212-scaled.png}
+   \caption*{\small \em Volunteer Bruce Gemmill removing bird nests from the vertical stabilizer.}
+   \label{fig:stab-one}
+\end{figure}
+
+The horizontal stabilisers were removed earlier, yet there still remained some
+nesting material to clear. These assemblies were brought to the restoration
+shops for a thorough clean-out and condition assessment. Phil Chrysler, Bill
+Cole,  Richard Houle and John Makadi lent their hands at pulling more stacks of
+hay out of the two structures. Access proved difficult necessitating  the use of
+a hinge rods, in the form of hooked tools for retrieving deep tufts of clumped
+nesting. The individual stabilisers were flipped over, blown out, pressure
+washed, and oiled, eventually rendering an accessible, stable assembly ready for
+restoration. We discovered a large patch on the leading edge of the port
+stabiliser. It covered a blunt force impact form which was probably caused by
+the boom of a forklift in a former life. 
+
+At the time of going to press, the rudder has been removed from the aircraft and
+the vertical stabiliser is slung and ready to pull. The North Star is prepped to
+roll out of storage for Canada day and the vertical stab removal is planned for
+July 5th. A 30T crane has been rented for the job, with all hands on deck
+confirmed for that day's shift schedule. Following this important milestone, the
+maple leaf will be lowered from North Star 515, until such time as the
+restoration nears its completion. I hope to see the day, dear reader, when the
+maple leaf is flown from those heights again.  
 
 %\section{Nr 4 Engine}
 %\label{sec:engine_4}
