--- a/pnsac/newsletter/article_SpecialEvents.tex
+++ b/pnsac/newsletter/article_SpecialEvents.tex
@@ -5,121 +5,67 @@
 % Language: Latex
 
 
-\title{Quarterly Meeting Report}
-\author{Drew Hodge}
+\title{Doors Open Ottawa 2018}
+\author{Roger Button}
 
 \maketitle
 
-On Saturday 7th December 2013, Project North Star Association of
-Canada (PNSAC) held a quarterly meeting in the auditorium of the
-Canadian Aviation and Space Museum (CASM) in Ottawa. It was a
-memorable meeting with over 200 people in attendance. Those in the
-audience that day were able to hear the story of the Gimli Glider told
-in person by Captain (retd.) Robert (Bob) Pearson, the pilot of Air
-Canada Boeing 767-200, fin number 604, when it made an unscheduled
-stop at Gimli Manitoba, thirty years ago.
+Doors Open Ottawa gives the general public an opportunity to view facilities for free which they would
+normally not have access. Evidently, it is the second largest event of its kind in North America and one of
+the largest in the world with over one million visitors since its inception in 2002. In the case of the
+Canadian Aviation and Space Museum its participation meant opening the doors of the reserve hangar.
+On June 2nd and 3rd the Museum welcomed some 3000 visitors. The visits of the reserve hangar took
+place by way of a self-guided tour supported by many of the Museum's volunteers coordinated by Cedric
+St. Amour the volunteer coordinator for the Museums Corporation. Project North Star was ably
+represented by Charles Baril, Claire Cameron, Garry Dupont, Ted Devey, Chris McGuffin, Neil Raynor,
+Jacques Roy, Nelson Smith, Tim Timmins, and Gary Whitten who ably answered questions about the
+aircraft. Rejean Demers, the Conservator Special Projects Manager was also present.
 
-The meeting started with an introduction by Bill Tate, Project North
-Star's Vice President.  Bill began by welcoming the audience, which,
-as well as PNSAC volunteers, included members of Vintage Wings of
-Canada, Ottawa Airport Watch, the Canadian Aviation Historical
-Society, the College of Professional Pilots of Canada, CASM volunteers
-and staff, Air Canada and WestJet pilots, and visitors from the
-general public, one of whom had travelled to Ottawa from Vancouver for
-the meeting. After describing the goals of Project North Star and
-asking PNSAC volunteers to stand and be recognized, Bill invited the
-audience to visit the world class exhibits in the Museum after the
-meeting.
-
-Bill's acquaintance with Bob Pearson goes back thirty-five years, when
-Bill was Captain Pearson's Second Officer on Boeing 727s based in
-Montreal. His duties in the cockpit back then gave Bill ample
-opportunities to watch Captain Pearson at work. Bill described Captain
-Pearson as a "highly professional pilot" who, "wearing his command
-lightly", demonstrated "highly polished interpersonal skills and a
-delightful sense of humour".  He then invited Captain Pearson to tell
-the story of flying unscheduled into Gimli.
-
-Captain Pearson spoke for a little over an hour with no notes and with
-reference to a few appropriate slides.  He described eloquently how,
-because of errors in the conversion of metric measurements, his Boeing
-767-200 ran out of fuel and lost both engines over Manitoba on the way
-from Ottawa to Edmonton. The full story is well documented in the book
-"Freefall: From 41,000 feet to zero - a true story, William and
-Marilyn Hoffer, Simon \& Schuster, 1989", but to hear it told in
-person by the pilot in command that Saturday, 23rd July, 1983, was a
-rare privilege.
-
-\begin{figure}[htbp]
+\begin{figure}[httb]
    \vspace{2em}
    \centering
-   %name of the graphic, without the path AND in EPS format:
-   \includegraphics[scale=0.9]{Pearson004.eps}
-   %caption of the figure 
-   \caption*{\small \em Captain (retd.) Robert Pearson.}
-   %label of the figure, which has to correspond to \ref{}:
-   \label{fig:pearson004}
+   \includegraphics[scale=0.275]{"PNSAC DOO 2018-scaled".png}
+  \caption*{\small \em Volunteers Roger Button, Richard Lodge, Chris McGuffin, Charles Baril and Garry Dupont on hand to explain our project at Doors Open Ottawa June 3rd.}
+   \label{fig:stab-one}
 \end{figure}
 
-The port engine stopped first at 41,000 feet prompting the decision to
-divert to Winnipeg.  At 28,000 feet the starboard engine ran down too,
-and Maurice Quintal, Captain Pearson's First Officer, made
-calculations that showed they couldn't reach Winnipeg.  Quintal
-advised Captain Pearson to try for the nearest runway on the former
-RCAF aerodrome at Gimili, twelve miles away.  Some eight or ten
-minutes after losing the first engine, Captain Pearson side-slipped
-the big Boeing down to an old runway that was being used as a racing
-track by members of the Winnipeg Sports Car Club. The nose wheel
-collapsed on landing, but the aircraft came to a stop and no one was
-seriously injured. The racers helped to put out a minor fire in the
-nose.
 
-Captain Pearson talked about the inquiry that followed the incident
-and its eventual exoneration of both pilots.  The aircraft was flown
-to Winnipeg just two days after the Gimli landing and saw service with
-Air Canada for another twenty-five years.  When the Boeing was retired
-to the Mohave desert in 2008, Captain Pearson was at the controls to
-make that last landing in Arizona.
+This event is also an opportunity to do a little fundraising for the Association. The merchandise desk was
+managed by Richard Lodge, Drew Hodge, and Roger Button. Sales of memorabilia and clothing were
+steady throughout the two days. A few memberships were also sold and donations received. The
+merchandise table was well positioned near the exit to catch visitors as they left. Unfortunately, the
+aircraft was not next to the merchandise table and it was clear that some visitors did not make the
+connection and others left without seeing the aircraft. It is hoped that these issues will be addressed for
+future viewings of the aircraft. Thanks to all the volunteers who devoted their time to this successful
+event.
 
-Following his talk, Captain Pearson answered questions from the
-audience.  Richard Lodge, PNSAC President, thanked Captain Pearson and
-presented him with a PNSAC golf shirt, a baseball cap, a coffee mug,
-and finally a certificate conferring upon him an Honorary Life
-Membership of the Project North Star Association.  Captain Pearson
-then graciously agreed to make presentations of volunteer-hours
-certificates and 10th Anniversary photos to PNSAC volunteers.  The
-following volunteers received certificates for the hours shown:
 
-\begin{itemize}
-  \item Bruce Gemmill (7000 hrs)
-  \item Ted Devey (4000 hrs)
-  \item Bill Tate (3000 hrs)
-  \item Richard Lodge (1000 hrs)
-  \item Bruce Grant (1000 hrs)
-  \item Robert D\'{e}sjardins (1000 hrs)
-  \item Peter Trowbridge (1000 hrs)
-  \item Charles Baril (1000 hrs)
-\end{itemize}
 
-\begin{figure}[htbp]
-   \vspace{2em}
-   \centering
-   %name of the graphic, without the path AND in EPS format:
-   \includegraphics[scale=0.9]{Pearson007.eps}
-   %caption of the figure 
-   \caption*{\small \em Richard Lodge presenting Captain Pearson with a
-     certificate for Honorary Life Membership in PNSAC.}
-   %label of the figure, which has to correspond to \ref{}:
-   \label{fig:engine3propcowl}
-\end{figure}
+%\begin{figure}[htbp]
+%   \vspace{2em}
+%   \centering
+%   %name of the graphic, without the path AND in EPS format:
+%   \includegraphics[scale=0.9]{Pearson004.eps}
+%   %caption of the figure 
+%   \caption*{\small \em Captain (retd.) Robert Pearson.}
+%   %label of the figure, which has to correspond to \ref{}:
+%   \label{fig:pearson004}
+%\end{figure}
+%
+%
+%
+%\begin{figure}[htbp]
+%   \vspace{2em}
+%   \centering
+%   %name of the graphic, without the path AND in EPS format:
+%   \includegraphics[scale=0.9]{Pearson007.eps}
+%   %caption of the figure 
+%   \caption*{\small \em Richard Lodge presenting Captain Pearson with a
+%     certificate for Honorary Life Membership in PNSAC.}
+%   %label of the figure, which has to correspond to \ref{}:
+%   \label{fig:engine3propcowl}
+%\end{figure}
 
-To conclude the meeting, Captain Pearson presented signed copies of
-the book "Freefall: From 41,000 feet to zero - a true story" to three
-audience members whose ticket numbers he had drawn at random.
-
-The Association's sincere thanks go to Bill Tate for organizing this
-quarterly meeting and the talk by Captain Pearson -- it was largely
-Bill's efforts that made the meeting the great success that it was.
 
 
 \begin{footnotesize}
